<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/time_text"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="Time"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_value"
        app:layout_constraintVertical_bias="0.661" />

    <EditText
        android:id="@+id/iter_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/P"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/iter_text"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="Iterations"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iter_value"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/p_text2"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:layout_marginBottom="272dp"
        android:gravity="center"
        android:text="P"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_value"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/time_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/P"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.739" />

    <EditText
        android:id="@+id/lambda_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/lambda"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.507" />

    <EditText
        android:id="@+id/P_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/P"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.309" />

    <EditText
        android:id="@+id/y1_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:ems="10"
        android:hint="@string/y_1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/x2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="x 2"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/x2_value"
        app:layout_constraintTop_toBottomOf="@+id/x1_text"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/y1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="y 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toEndOf="@+id/y1_value"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/x1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="x 1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/x1_value"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/x2_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/x_2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/P_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/x1_value"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/y2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="y 2"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/y2_value"
        app:layout_constraintTop_toBottomOf="@+id/y1_text"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/y2_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/y_2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/P_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/y1_value"
        app:layout_constraintVertical_bias="0.412" />

    <EditText
        android:id="@+id/x1_value"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/x_1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="Perceptron Learning Algorithm"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="82dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonCalculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lambda_text"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="Lambda"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lambda_value"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/out_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/output"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>